Update Preference UI. Update all visible icons to Material Outline Gray

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -25,8 +25,8 @@ PRIVACY_PIN_ALLOW = images/privacy_presence_in_allow.png
 PRIVACY_MSG_DENY = images/privacy_message_deny.png
 PRIVACY_MSG_ALLOW = images/privacy_message_allow.png
 CLIPBOARD = images/clipboard.png
-PRIVACY_ICON = images/privacy_icon.png
-PRIVACY_ICON_SMALL = images/privacy_icon_small.png
+PRIVACY_ICON = images/icons/privacy.png
+PRIVACY_ICON_SMALL = images/icons/privacy.png
 PRIVACY_LIGHTNING = images/privacy_lightning.png
 PRIVACY_CHECK = images/privacy_check.png
 PRIVACY_DEACTIVATE_LIST = images/privacy_list_deactivate.png
@@ -48,20 +48,20 @@ TRAY_CONNECTING_LINUX = images/spark_tray_connecting-24x24.png
 SPARK_IMAGE_32x32 = images/spark-32x32.png
 MAIN_IMAGE_ICO = images/icon_16.ico
 MAIN_ICNS_FILE = images/message.icns
-SMALL_CHECK = images/smallCheck.png
-SMALL_DELETE = images/smallDelete.png
+SMALL_CHECK = images/icons/accept.png
+SMALL_DELETE = images/icons/remove.png
 AVAILABLE_USER = images/availableUser.png
 AWAY_USER = images/awayUser.png
 FIND_IMAGE = images/find.png
-SMALL_ADD_IMAGE = images/small_add.png
+SMALL_ADD_IMAGE = images/icons/add.png
 DOCUMENT_EXCHANGE_IMAGE = images/document_exchange.png
 SMALL_DOCUMENT_ADD = images/document_add.png
 SMALL_CIRCLE_DELETE = images/small_delete.png
 SMALL_DOCUMENT_VIEW = images/document_view.png
-SMALL_USER1_MESSAGE = images/user1_message-16x16.png
-USER1_MESSAGE_24x24 = images/user1_message-24x24.png
+SMALL_USER1_MESSAGE = images/icons/chat_settings.png
+USER1_MESSAGE_24x24 = images/icons/chat_settings.png
 SMALL_USER1_TIME = images/user1_time.png
-SMALL_USER1_NEW = images/user1_new.png
+SMALL_USER1_NEW = images/icons/create.png
 SMALL_USER1_STOPWATCH = images/stopwatch_pause.png
 SMALL_USER1_MOBILEPHONE = images/user1_mobilephone.png
 SMALL_USER1_INFORMATION = images/user1_information.png
@@ -69,22 +69,22 @@ SMALL_ENTRY = images/small_entry.gif
 SMALL_AGENT_IMAGE = images/small_agent.png
 CHATTING_AGENT_IMAGE = images/user1.png
 CHATTING_CUSTOMER_IMAGE = images/user2.png
-INFORMATION_IMAGE = images/information.png
+INFORMATION_IMAGE = images/icons/about.png
 BLANK_IMAGE = images/blank.gif
 USER_HEADSET_24x24 = images/user_headset24.png
 FOLDER_CLOSED = images/folder_closed.png
 FOLDER = images/folder.png
 SMALL_PIN_BLUE = images/pin_blue.png
-SMALL_DATA_FIND_IMAGE = images/data_find.png
-SMALL_BUSINESS_MAN_VIEW = images/businessman_view.png
+SMALL_DATA_FIND_IMAGE = images/icons/search.png
+SMALL_BUSINESS_MAN_VIEW = images/icons/edit_profile.png
 SMALL_ALL_AGENTS_IMAGE = images/user1_earth.png
-SMALL_WORKGROUP_QUEUE_IMAGE = images/users_into.png
-SMALL_ALL_CHATS_IMAGE = images/users_family.png
+SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/start_conference.png
+SMALL_ALL_CHATS_IMAGE = images/icons/contacts.png
 SMALL_CURRENT_AGENTS = images/users2.png
 HELP2_24x24 = images/help_24x24.png
-SMALL_ALARM_CLOCK = images/alarmclock.png
+SMALL_ALARM_CLOCK = images/icons/alarmclock.png
 SMALL_SCROLL_REFRESH = images/scroll_refresh.png
-SMALL_QUESTION = images/help_16x16.png
+SMALL_QUESTION = images/icons/help.png
 USER1_32x32 = images/User1_32x32.png
 DATA_DELETE_16x16 = images/data_delete.png
 DATA_REFRESH_16x16 = images/data_refresh.png
@@ -100,20 +100,21 @@ PUSH_URL_16x16 = images/earth_connection-16x16.png
 LINK_16x16 = images/link-16x16.png
 LINK_DELETE_16x16 = images/link_delete.png
 EARTH_LOCK_16x16 = images/earth_lock-16x16.png
-LOCK_16x16 = images/lock-16x16.png
-BLOCK_CONTACT_16x16 = images/privacy_block_16x16.png
-UNBLOCK_CONTACT_16x16 = images/privacy_unblock_16x16.png
+LOCK_16x16 = images/icons/lock.png
+BLOCK_CONTACT_16x16 = images/icons/block.png
+UNBLOCK_CONTACT_16x16 = images/icons/unblock.png
 LOCK_UNLOCK_16x16 = images/lock_unlock-16x16.png
 ONLINE_ICO = images/icon1.ico
 OFFLINE_ICO = images/icon2.ico
 INFORMATION_ICO = images/icon3.ico
-SAVE_AS_16x16 = images/save_as.png
+SAVE_AS_16x16 = images/icons/save.png
 NOTE_EDIT_16x16 = images/note_edit.png
-ADDRESS_BOOK_16x16 = images/address_book.png
-MEGAPHONE_16x16 = images/megaphone.png
+ADDRESS_BOOK_16x16 = images/icons/address_book.png
+MEGAPHONE_16x16 = images/icons/broadcast.png
 EARTH_VIEW_16x16 = images/earth_view.png
-HISTORY_16x16 = images/history.png
-DOWNLOAD_16x16 = images/download.png
+HISTORY_16x16 = images/icons/history.png
+DOWNLOAD_16x16 = images/icons/downloads.png
+CHECK_UPDATE = images/icons/check_update.png
 RED_FLAG_16x16 = images/flag_red.png
 GREEN_FLAG_16x16 = images/flag_green.png
 YELLOW_FLAG_16x16 = images/flag_yellow.png
@@ -132,20 +133,20 @@ PAWN_GLASS_YELLOW = images/pawn_glass_yellow.png
 PLUS_SIGN = images/plus-sign.png
 MINUS_SIGN = images/minus-sign.png
 MAGICIAN_IMAGE = images/magician.png
-FIND_TEXT_IMAGE = images/find_text.png
-LOGIN_KEY_IMAGE = images/login-key.png
-BRICKWALL_IMAGE = images/brickwall.png
+FIND_TEXT_IMAGE = images/icons/lookup.png
+LOGIN_KEY_IMAGE = images/icons/login.png
+BRICKWALL_IMAGE = images/icons/block.png
 MODERATOR_IMAGE = images/moderator.gif
 DESKTOP_IMAGE = images/desktop.png
 SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
 BUSY_IMAGE = images/busy.gif
-CLOSE_IMAGE = images/close.png
+CLOSE_IMAGE = images/icons/close.png
 VIEW_IMAGE = images/view.png
 MOBILE_PHONE_IMAGE = images/mobilephone.png
 ON_PHONE_IMAGE = images/on-phone.png
-REFRESH_IMAGE = images/refresh.png
-CLOSE_WHITE_X_IMAGE = images/close_white.png
-CLOSE_DARK_X_IMAGE = images/close_dark.png
+REFRESH_IMAGE = images/icons/refresh.png
+CLOSE_WHITE_X_IMAGE = images/icons/close.png
+CLOSE_DARK_X_IMAGE = images/icons/close.png
 PALETTE_24x24_IMAGE = images/palette_24x24.png
 COLOR_ICON = images/colors.png
 DEFAULT_AVATAR_16x16_IMAGE = images/default_avatar_16x16.png
@@ -161,8 +162,8 @@ UNRECOVERABLE_ERROR = Unknown connection error. Please review the logs for more 
 
 #Chat Window Images
 ALERT = images/alert.png
-FRAME_ALWAYS_ON_TOP_ACTIVE = images/window_to_front_active.png
-FRAME_ALWAYS_ON_TOP_DEACTIVE = images/window_to_front_deactive.png
+FRAME_ALWAYS_ON_TOP_ACTIVE = images/icons/pin_top.png
+FRAME_ALWAYS_ON_TOP_DEACTIVE = images/icons/unpin_top.png
 
 
 #Chat window text
@@ -202,12 +203,12 @@ FORUM_TAB_TITLE = Forums
 
 #Images
 CANCEL_IMAGE = images/cancel.gif
-CONFERENCE_IMAGE_24x24 = images/conference_24x24.png
-CONFERENCE_IMAGE_16x16 = images/conference_16x16.png
+CONFERENCE_IMAGE_24x24 = images/icons/conference.png
+CONFERENCE_IMAGE_16x16 = images/icons/conference.png
 PROFILE_IMAGE_24x24 = images/profile_24x24.png
-SEARCH_USER_16x16 = images/search_user_16x16.png
-SEND_FILE_24x24 = images/send_file_24x24.png
-ADD_IMAGE_24x24 = images/add_24x24.png
+SEARCH_USER_16x16 = images/icons/search.png
+SEND_FILE_24x24 = images/icons/send_file.png
+ADD_IMAGE_24x24 = images/icons/add_image.png
 TELEPHONE_24x24 = images/telephone_24x24.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
@@ -216,41 +217,41 @@ MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
 MESSAGE_NEW_TRAY_LINUX = images/spark_tray_message-24x24.png
-TYPING_TRAY = images/message_edit.png
-TYPING_TRAY_LINUX = images/spark_tray_typing-24x24.png
+TYPING_TRAY = images/icons/edit.png
+TYPING_TRAY_LINUX = images/icons/.edit.png
 OFFLINE_IMAGE = images/Offline.png
-ERASER_IMAGE = images/eraser.png
+ERASER_IMAGE = images/icons/clear.png
 TOOLBAR_BACKGROUND = images/toolbar.png
 TRAFFIC_LIGHT_IMAGE = images/traffic-light.png
-SERVER_ICON = images/server.png
-BOOKMARK_ICON = images/bookmark.png
-ADD_BOOKMARK_ICON = images/bookmark_add.png
-DELETE_BOOKMARK_ICON = images/bookmark_delete.png
+SERVER_ICON = images/icons/conferences.png
+BOOKMARK_ICON = images/icons/bookmark.png
+ADD_BOOKMARK_ICON = images/icons/bookmark.png
+DELETE_BOOKMARK_ICON = images/icons/remove.png
 CLEAR_BALL_ICON = images/im_unavailable.png
 CALL_ICON = images/call.png
 PROFILE_ICON = images/profile.png
 SEND_FILE_ICON = images/document_into.png
-ADD_CONTACT_IMAGE = images/add_contact.png
-JOIN_GROUPCHAT_IMAGE = images/join_groupchat.png
-PEOPLE_IMAGE = images/people-icon.png
+ADD_CONTACT_IMAGE = images/icons/add_user.png
+JOIN_GROUPCHAT_IMAGE = images/icons/join.png
+PEOPLE_IMAGE = images/icons/add_user.png
 DOWN_ARROW_IMAGE = images/down_arrow.gif
-PRINTER_IMAGE_16x16 = images/printer.png
+PRINTER_IMAGE_16x16 = images/icons/print.png
 SEND_MAIL_IMAGE_16x16 = images/sendmail.png
-SEARCH_IMAGE_32x32 = images/search_32x32.png
+SEARCH_IMAGE_32x32 = images/icons/search.png
 MAIL_IMAGE_32x32 = images/mail_32x32.png
-PREFERENCES_IMAGE = images/preferences.png
+PREFERENCES_IMAGE = images/icons/preferences.png
 NOTEBOOK_IMAGE = images/notebook.png
 TEXT_BOLD = images/text_bold.png
 TEXT_ITALIC = images/text_italics.png
 TEXT_UNDERLINE = images/text_underlined.png
 TEXT_NORMAL = images/text_normal.png
-SMALL_USER_ENTER = images/smallUserEnter.png
-SMALL_USER_DELETE = images/smallUserDelete.png
+SMALL_USER_ENTER = images/icons/join.png
+SMALL_USER_DELETE = images/icons/remove.png
 QUESTIONS_ANSWERS = images/questionsAnswers.png
-SMALL_MESSAGE_IMAGE = images/message.png
-SMALL_MESSAGE_EDIT_IMAGE = images/message_edit.png
-SMALL_ABOUT_IMAGE = images/about.png
-DOOR_IMAGE = images/door.gif
+SMALL_MESSAGE_IMAGE = images/icons/start_chat.png
+SMALL_MESSAGE_EDIT_IMAGE = images/icons/edit.png
+SMALL_ABOUT_IMAGE = images/icons/about.png
+DOOR_IMAGE = images/icons/join.png
 STAR_BLUE_IMAGE = images/star_blue.png
 STAR_RED_IMAGE = images/star_red.png
 STAR_GREY_IMAGE = images/star_grey.png
@@ -286,10 +287,10 @@ FASTPATH_IMAGE_16x16 = images/fastpath16.png
 FASTPATH_IMAGE_24x24 = images/fastpath24.png
 FASTPATH_IMAGE_32x32 = images/fastpath32.png
 CIRCLE_CHECK_IMAGE = images/check.png
-TRANSFER_IMAGE_24x24 = images/transfer-24x24.png
+TRANSFER_IMAGE_24x24 = images/icons/add_user_24.png
 FASTPATH_OFFLINE_IMAGE_16x16 = images/fastpath16_offline.png
 FASTPATH_OFFLINE_IMAGE_24x24 = images/fastpath24_offline.png
-USER1_ADD_16x16 = images/user1_add.png
+USER1_ADD_16x16 = images/icons/create.png
 END_BUTTON_24x24 = images/end_button_24x24.png
 POWERED_BY_IMAGE = images/powered_by.png
 
@@ -345,7 +346,7 @@ COMPUTER_IMAGE_16x16 = images/icon_computer_16x16.png
 
 # Conferences
 CONFERENCE_IMAGE_48x48 = images/messages_48x48.png
-ACCEPT_INVITE_IMAGE = images/accept.png
+ACCEPT_INVITE_IMAGE = images/icons/accept.png
 REJECT_INVITE_IMAGE = images/reject.png
 INVITE_MORE_IMAGE = images/invitemore.png
 FILTER_LABEL = Search
