--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -103,7 +103,7 @@ EARTH_LOCK_16x16 = images/earth_lock-16x16.png
 LOCK_16x16 = images/icons/lock.png
 BLOCK_CONTACT_16x16 = images/icons/block.png
 UNBLOCK_CONTACT_16x16 = images/icons/unblock.png
-LOCK_UNLOCK_16x16 = images/lock_unlock-16x16.png
+LOCK_UNLOCK_16x16 = images/icons/unlock.png
 ONLINE_ICO = images/icon1.ico
 OFFLINE_ICO = images/icon2.ico
 INFORMATION_ICO = images/icon3.ico
