Update LF Manager to Allow Single LF Update ThemePanel and remove theme selection, update more icons

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -337,7 +337,7 @@ ChatInput.SelectedTextColor = 255,255,255,255
 ChatInput.SelectionColor = 10,36,106,255
 ContactItemNickname.foreground = 0,0,0,255
 ContactItemDescription.foreground = 128,128,128,255
-ContactItem.background = 240,243,253,255
+ContactItem.background = 255, 255, 255,255
 ContactItemOffline.color = 128,128,128,255
 Link.foreground = 0,0,255,255
 List.selectionBackground = 217,232,250,255
