--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -92,7 +92,7 @@ USER1_BACK_16x16 = images/user1_back.png
 FONT_16x16 = images/font.png
 DOCUMENT_FIND_16x16 = images/document_find.png
 DOCUMENT_INFO_32x32 = images/document_info.png
-DOCUMENT_16x16 = images/document.png
+DOCUMENT_16x16 = images/icons/note.png
 SMALL_CLOSE_BUTTON = images/deleteitem.gif
 COPY_16x16 = images/copy.png
 BLANK_24x24 = images/blank_24x24.png
@@ -137,7 +137,7 @@ FIND_TEXT_IMAGE = images/icons/lookup.png
 LOGIN_KEY_IMAGE = images/icons/login.png
 BRICKWALL_IMAGE = images/icons/block.png
 MODERATOR_IMAGE = images/moderator.gif
-DESKTOP_IMAGE = images/desktop.png
+DESKTOP_IMAGE = images/icons/tasklist.png
 SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
 BUSY_IMAGE = images/busy.gif
 CLOSE_IMAGE = images/icons/close.png
@@ -147,8 +147,9 @@ ON_PHONE_IMAGE = images/on-phone.png
 REFRESH_IMAGE = images/icons/refresh.png
 CLOSE_WHITE_X_IMAGE = images/icons/close.png
 CLOSE_DARK_X_IMAGE = images/icons/close.png
-PALETTE_24x24_IMAGE = images/palette_24x24.png
-COLOR_ICON = images/colors.png
+PALETTE_24x24_IMAGE = images/icons/appearance.png
+NOTIFICATIONS = images/icons/notifications.png
+COLOR_ICON = images/icons/colors.png
 DEFAULT_AVATAR_16x16_IMAGE = images/default_avatar_16x16.png
 DEFAULT_AVATAR_32x32_IMAGE = images/default_avatar_32x32.png
 DEFAULT_AVATAR_64x64_IMAGE = images/default_avatar_64x64.png
@@ -264,10 +265,10 @@ LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
 FREE_TO_CHAT_IMAGE = images/im_free_chat.png
-SOUND_PREFERENCES_IMAGE = images/text_loudspeaker.png
+SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
 PHOTO_IMAGE = images/photo_scenery.png
-PLUGIN_IMAGE = images/plugin-16x16.gif
+PLUGIN_IMAGE = images/icons/plugins.png
 SMALL_PROFILE_IMAGE = images/small_profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
@@ -352,5 +353,5 @@ INVITE_MORE_IMAGE = images/invitemore.png
 FILTER_LABEL = Search
 
 # Language
-LANGUAGE_ICON = images/language_plugin.png
+LANGUAGE_ICON = images/icons/language.png
 EXECUTABLE_NAME = Spark.exe
