UI and Icons Update

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -206,11 +206,11 @@ FORUM_TAB_TITLE = Forums
 CANCEL_IMAGE = images/cancel.gif
 CONFERENCE_IMAGE_24x24 = images/icons/conference.png
 CONFERENCE_IMAGE_16x16 = images/icons/conference.png
-PROFILE_IMAGE_24x24 = images/profile_24x24.png
+PROFILE_IMAGE_24x24 = images/icons/profile.png
 SEARCH_USER_16x16 = images/icons/search.png
 SEND_FILE_24x24 = images/icons/send_file.png
 ADD_IMAGE_24x24 = images/icons/add_image.png
-TELEPHONE_24x24 = images/telephone_24x24.png
+TELEPHONE_24x24 = images/icons/phone.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
 INVISIBLE = images/im_invisible.png
@@ -267,14 +267,14 @@ BACKGROUND_IMAGE = images/background.png
 FREE_TO_CHAT_IMAGE = images/im_free_chat.png
 SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
-PHOTO_IMAGE = images/photo_scenery.png
+PHOTO_IMAGE = images/icons/photo.png
 PLUGIN_IMAGE = images/icons/plugins.png
 SMALL_PROFILE_IMAGE = images/small_profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
 DOWN_OPTION_IMAGE = images/option.png
 STICKY_NOTE_IMAGE = images/sticky.png
-HISTORY_24x24 = images/history-24x24.png
+HISTORY_24x24 = images/icons/history.png
 PANE_UP_ARROW_IMAGE = images/blueArrowRight.png
 PANE_DOWN_ARROW_IMAGE = images/blueArrowDown.png
 PROFILE_IMAGE_16x16 = images/profile_16x16.png
@@ -336,7 +336,7 @@ IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
 DIVIDER_IMAGE = images/divider.png
 LIGHTING_BOLT_IMAGE = images/lightning16.png
 HEADSET_IMAGE = images/headset.png
-BUZZ_IMAGE = images/bell.png
+BUZZ_IMAGE = images/icons/buzz.png
 SETTINGS_IMAGE_16x16 = images/settings16x16.png
 SETTINGS_IMAGE_24x24 = images/settings24x24.png
 
@@ -355,3 +355,7 @@ FILTER_LABEL = Search
 # Language
 LANGUAGE_ICON = images/icons/language.png
 EXECUTABLE_NAME = Spark.exe
+
+
+#new icons
+UPLOAD_ICON = images/icons/upload.png
