Update emoticons and fix missing icons in preferences and chat room

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -219,7 +219,7 @@ MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
 MESSAGE_NEW_TRAY_LINUX = images/spark_tray_message-24x24.png
 TYPING_TRAY = images/icons/edit.png
-TYPING_TRAY_LINUX = images/icons/.edit.png
+TYPING_TRAY_LINUX = images/icons/edit.png
 OFFLINE_IMAGE = images/Offline.png
 ERASER_IMAGE = images/icons/clear.png
 TOOLBAR_BACKGROUND = images/toolbar.png
@@ -334,11 +334,11 @@ IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
 
 #Misc
 DIVIDER_IMAGE = images/divider.png
-LIGHTING_BOLT_IMAGE = images/lightning16.png
-HEADSET_IMAGE = images/headset.png
+LIGHTING_BOLT_IMAGE = images/icons/lightning.png
+HEADSET_IMAGE = images/icons/headset.png
 BUZZ_IMAGE = images/icons/buzz.png
-SETTINGS_IMAGE_16x16 = images/settings16x16.png
-SETTINGS_IMAGE_24x24 = images/settings24x24.png
+SETTINGS_IMAGE_16x16 = images/icons/settings.png
+SETTINGS_IMAGE_24x24 = images/icons/settings.png
 
 #Phone
 DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
@@ -359,3 +359,4 @@ EXECUTABLE_NAME = Spark.exe
 
 #new icons
 UPLOAD_ICON = images/icons/upload.png
+PADE_ICON = images/icons/pade.png
