Update Roaster Icons and Spacing - Fix appearance null error - Add Right click to Username in Login Panel

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -56,7 +56,7 @@ FIND_IMAGE = images/find.png
 SMALL_ADD_IMAGE = images/icons/add.png
 DOCUMENT_EXCHANGE_IMAGE = images/document_exchange.png
 SMALL_DOCUMENT_ADD = images/document_add.png
-SMALL_CIRCLE_DELETE = images/small_delete.png
+SMALL_CIRCLE_DELETE = images/icons/close.png
 SMALL_DOCUMENT_VIEW = images/document_view.png
 SMALL_USER1_MESSAGE = images/icons/chat_settings.png
 USER1_MESSAGE_24x24 = images/icons/chat_settings.png
@@ -64,7 +64,7 @@ SMALL_USER1_TIME = images/user1_time.png
 SMALL_USER1_NEW = images/icons/create.png
 SMALL_USER1_STOPWATCH = images/stopwatch_pause.png
 SMALL_USER1_MOBILEPHONE = images/user1_mobilephone.png
-SMALL_USER1_INFORMATION = images/user1_information.png
+SMALL_USER1_INFORMATION = images/icons/subscribe.png
 SMALL_ENTRY = images/small_entry.gif
 SMALL_AGENT_IMAGE = images/small_agent.png
 CHATTING_AGENT_IMAGE = images/user1.png
@@ -93,12 +93,12 @@ FONT_16x16 = images/font.png
 DOCUMENT_FIND_16x16 = images/document_find.png
 DOCUMENT_INFO_32x32 = images/document_info.png
 DOCUMENT_16x16 = images/icons/note.png
-SMALL_CLOSE_BUTTON = images/deleteitem.gif
-COPY_16x16 = images/copy.png
+SMALL_CLOSE_BUTTON = images/icons/close.png
+COPY_16x16 = images/icons/copy.png
 BLANK_24x24 = images/blank_24x24.png
 PUSH_URL_16x16 = images/earth_connection-16x16.png
-LINK_16x16 = images/link-16x16.png
-LINK_DELETE_16x16 = images/link_delete.png
+LINK_16x16 = images/icons/link.png
+LINK_DELETE_16x16 = images/icons/link_delete.png
 EARTH_LOCK_16x16 = images/earth_lock-16x16.png
 LOCK_16x16 = images/icons/lock.png
 BLOCK_CONTACT_16x16 = images/icons/block.png
@@ -150,9 +150,9 @@ CLOSE_DARK_X_IMAGE = images/icons/close.png
 PALETTE_24x24_IMAGE = images/icons/appearance.png
 NOTIFICATIONS = images/icons/notifications.png
 COLOR_ICON = images/icons/colors.png
-DEFAULT_AVATAR_16x16_IMAGE = images/default_avatar_16x16.png
-DEFAULT_AVATAR_32x32_IMAGE = images/default_avatar_32x32.png
-DEFAULT_AVATAR_64x64_IMAGE = images/default_avatar_64x64.png
+DEFAULT_AVATAR_16x16_IMAGE = images/icons/user24.png
+DEFAULT_AVATAR_32x32_IMAGE = images/icons/user32.png
+DEFAULT_AVATAR_64x64_IMAGE = images/icons/user64.png
 
 # Global Values
 ERROR_INVALID_WORKGROUP = The workgroup is not valid. Please use a valid workgroup.
@@ -204,11 +204,11 @@ FORUM_TAB_TITLE = Forums
 
 #Images
 CANCEL_IMAGE = images/cancel.gif
-CONFERENCE_IMAGE_24x24 = images/icons/conference.png
+CONFERENCE_IMAGE_24x24 = images/icons/invite24.png
 CONFERENCE_IMAGE_16x16 = images/icons/conference.png
-PROFILE_IMAGE_24x24 = images/icons/profile.png
+PROFILE_IMAGE_24x24 = images/icons/profile24.png
 SEARCH_USER_16x16 = images/icons/search.png
-SEND_FILE_24x24 = images/icons/send_file.png
+SEND_FILE_24x24 = images/icons/send_file24.png
 ADD_IMAGE_24x24 = images/icons/add_image.png
 TELEPHONE_24x24 = images/icons/phone.png
 IM_DND = images/im_dnd.png
@@ -231,7 +231,7 @@ DELETE_BOOKMARK_ICON = images/icons/remove.png
 CLEAR_BALL_ICON = images/im_unavailable.png
 CALL_ICON = images/call.png
 PROFILE_ICON = images/profile.png
-SEND_FILE_ICON = images/document_into.png
+SEND_FILE_ICON = images/icons/send_file.png
 ADD_CONTACT_IMAGE = images/icons/add_user.png
 JOIN_GROUPCHAT_IMAGE = images/icons/join.png
 PEOPLE_IMAGE = images/icons/add_user.png
@@ -267,17 +267,17 @@ BACKGROUND_IMAGE = images/background.png
 FREE_TO_CHAT_IMAGE = images/im_free_chat.png
 SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
-PHOTO_IMAGE = images/icons/photo.png
+PHOTO_IMAGE = images/icons/screenshot24.png
 PLUGIN_IMAGE = images/icons/plugins.png
 SMALL_PROFILE_IMAGE = images/small_profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
 DOWN_OPTION_IMAGE = images/option.png
 STICKY_NOTE_IMAGE = images/sticky.png
-HISTORY_24x24 = images/icons/history.png
+HISTORY_24x24 = images/icons/history24.png
 PANE_UP_ARROW_IMAGE = images/blueArrowRight.png
 PANE_DOWN_ARROW_IMAGE = images/blueArrowDown.png
-PROFILE_IMAGE_16x16 = images/profile_16x16.png
+PROFILE_IMAGE_16x16 = images/icons/profile.png
 LIGHTBULB_ON_16x16_IMAGE = images/lightbulb_on.png
 DUMMY_CONTACT_IMAGE = images/dummyContact.png
 CALENDAR_IMAGE = images/icon_calendarpicker.gif
