SPARK-2212 smack-compression-jzlib deprecated

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -126,10 +126,10 @@
             <artifactId>smack-java8</artifactId>
             <version>${dependency.smack.version}</version>
         </dependency>
-        <dependency>
+      <!--<dependency>
             <groupId>org.igniterealtime.smack</groupId>
             <artifactId>smack-compression-jzlib</artifactId>
-            <version>${dependency.smack.version}</version>
+            <version>${dependency.smack.version}</version>-->
         </dependency>
         <dependency>
             <groupId>org.igniterealtime.spark</groupId>
