Revert to Smack 4.3.4

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -123,14 +123,14 @@
         </dependency>
         <dependency>
             <groupId>org.igniterealtime.smack</groupId>
-            <artifactId>smack-java8</artifactId>
+            <artifactId>smack-java7</artifactId>
             <version>${dependency.smack.version}</version>
         </dependency>
-      <!--<dependency>
+        <dependency>
             <groupId>org.igniterealtime.smack</groupId>
             <artifactId>smack-compression-jzlib</artifactId>
             <version>${dependency.smack.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.igniterealtime.spark</groupId>
             <artifactId>emoticons</artifactId>
