Fix History Log Font Size -Update Status Dropdown

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -275,8 +275,8 @@ README_IMAGE = images/doc-readme-16x16.gif
 DOWN_OPTION_IMAGE = images/option.png
 STICKY_NOTE_IMAGE = images/sticky.png
 HISTORY_24x24 = images/icons/history24.png
-PANE_UP_ARROW_IMAGE = images/blueArrowRight.png
-PANE_DOWN_ARROW_IMAGE = images/blueArrowDown.png
+PANE_UP_ARROW_IMAGE = images/icons/collapse_up.png
+PANE_DOWN_ARROW_IMAGE = images/icons/collapse_down.png
 PROFILE_IMAGE_16x16 = images/icons/profile.png
 LIGHTBULB_ON_16x16_IMAGE = images/lightbulb_on.png
 DUMMY_CONTACT_IMAGE = images/dummyContact.png
