Add unread messages indicator for chats in scrollable tabs

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -360,3 +360,4 @@ EXECUTABLE_NAME = Spark.exe
 #new icons
 UPLOAD_ICON = images/icons/upload.png
 PADE_ICON = images/icons/pade.png
+NEW_MESSAGE = images/icons/incoming_meesage.png
