Add new icon "on phone"

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -143,7 +143,7 @@ BUSY_IMAGE = images/busy.gif
 CLOSE_IMAGE = images/icons/close.png
 VIEW_IMAGE = images/view.png
 MOBILE_PHONE_IMAGE = images/mobilephone.png
-ON_PHONE_IMAGE = images/on-phone.png
+ON_PHONE_IMAGE = images/icons/on-phone.png
 REFRESH_IMAGE = images/icons/refresh.png
 CLOSE_WHITE_X_IMAGE = images/icons/close.png
 CLOSE_DARK_X_IMAGE = images/icons/close.png
