--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -209,7 +209,7 @@ CONFERENCE_IMAGE_16x16 = images/icons/conference.png
 PROFILE_IMAGE_24x24 = images/icons/profile24.png
 SEARCH_USER_16x16 = images/icons/search.png
 SEND_FILE_24x24 = images/icons/send_file24.png
-ADD_IMAGE_24x24 = images/icons/add_image.png
+ADD_IMAGE_24x24 = images/icons/add_user_24.png
 TELEPHONE_24x24 = images/icons/phone.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
