Update Lookup profile menu location and update add contact icon

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -291,7 +291,7 @@ CIRCLE_CHECK_IMAGE = images/check.png
 TRANSFER_IMAGE_24x24 = images/icons/add_user_24.png
 FASTPATH_OFFLINE_IMAGE_16x16 = images/fastpath16_offline.png
 FASTPATH_OFFLINE_IMAGE_24x24 = images/fastpath24_offline.png
-USER1_ADD_16x16 = images/icons/create.png
+USER1_ADD_16x16 = images/icons/add_user.png
 END_BUTTON_24x24 = images/end_button_24x24.png
 POWERED_BY_IMAGE = images/powered_by.png
 
