remove spaces and special characters from plugin names.
I hope someone will fix the problem with spaces in the names of plugins for working with ClientControl SPARK-2219.
But if it doesn't, push this PR: D

--- a/plugins/roar/pom.xml
+++ b/plugins/roar/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>roar</artifactId>
     <version>0.6</version>
 
-    <name>Roar!!!</name>
+    <name>Roar</name>
     <description>Provides customizable popup/notification functionality.</description>
 
     <contributors>
