--- a/emoticons/src/main/OldSpark.adiumemoticonset/OldSpark.adiumemoticonset/Emoticons.plist
+++ b/emoticons/src/main/OldSpark.adiumemoticonset/OldSpark.adiumemoticonset/Emoticons.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>SparkSetVersion</key>
+<key>AdiumSetVersion</key>
 <integer>1</integer>
 <key>Emoticons</key>
 <dict>
