Add old emoji in pom.xml

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -160,6 +160,14 @@
             <artifactId>emoticons</artifactId>
             <version>${project.version}</version>
             <scope>runtime</scope>
+            <classifier>OldSpark.adiumemoticonset.xml</classifier>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.spark</groupId>
+            <artifactId>emoticons</artifactId>
+            <version>${project.version}</version>
+            <scope>runtime</scope>
             <classifier>Default.adiumemoticonset</classifier>
             <type>zip</type>
         </dependency>
