--- a/emoticons/pom.xml
+++ b/emoticons/pom.xml
@@ -41,6 +41,7 @@
                         <descriptor>src/assembly/Default.adiumemoticonset.xml</descriptor>
                         <descriptor>src/assembly/GTalk.AdiumEmoticonset.xml</descriptor>
                         <descriptor>src/assembly/POPO.adiumemoticonset.xml</descriptor>
+                        <descriptor>src/assembly/OldSpark.adiumemoticonset.xml</descriptor>
                         <descriptor>src/assembly/sparkEmoticonSet.xml</descriptor>
                     </descriptors>
                 </configuration>
