--- a/plugins/assembly-descriptor/pom.xml
+++ b/plugins/assembly-descriptor/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.igniterealtime.spark</groupId>
         <artifactId>parent</artifactId>
-        <version>2.9.5-SNAPSHOT</version>
+        <version>3.0.0-beta</version>
         <relativePath>../../</relativePath>
     </parent>
 
