--- a/core/pom.xml
+++ b/core/pom.xml
@@ -246,6 +246,11 @@
         <version>0.45</version>
         <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
     
     <repositories>
