--- a/core/pom.xml
+++ b/core/pom.xml
@@ -164,9 +164,9 @@
             <type>zip</type>
         </dependency>
         <dependency>
-            <groupId>dom4j</groupId>
+            <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
