--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -346,10 +346,10 @@ DIAL_PHONE_IMAGE_16x16 = images/icon_phone-call_16x16.png
 COMPUTER_IMAGE_16x16 = images/icon_computer_16x16.png
 
 # Conferences
-CONFERENCE_IMAGE_48x48 = images/messages_48x48.png
+CONFERENCE_IMAGE_48x48 = images/icons/conference_48x48.png
 ACCEPT_INVITE_IMAGE = images/icons/accept.png
 REJECT_INVITE_IMAGE = images/icons/reject.png
-INVITE_MORE_IMAGE = images/invitemore.png
+INVITE_MORE_IMAGE = images/icons/invitemore.png
 FILTER_LABEL = Search
 
 # Language
