Add new icon for Alert
Hi,
before
https://yadi.sk/i/C7hhmlJypQLh2A
after
https://yadi.sk/i/hvckFBtmo_mrYg

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -162,7 +162,7 @@ SERVER_UNAVAILABLE = Can't connect to server: invalid name or server not reachab
 UNRECOVERABLE_ERROR = Unknown connection error. Please review the logs for more information.
 
 #Chat Window Images
-ALERT = images/alert.png
+ALERT = images/icons/alert.png
 FRAME_ALWAYS_ON_TOP_ACTIVE = images/icons/pin_top.png
 FRAME_ALWAYS_ON_TOP_DEACTIVE = images/icons/unpin_top.png
 
