Add new Icon for Privacy
Hi.
before
https://yadi.sk/i/O5OWWajtv65Frg
after
https://yadi.sk/i/fDLriz89vCtx9w

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -16,20 +16,20 @@ LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 
 
 # PrivacyPlugin
-PRIVACY_QUERY_DENY = images/privacy_query_deny.png
-PRIVACY_QUERY_ALLOW = images/privacy_query_allow.png
-PRIVACY_POUT_DENY = images/privacy_presence_out_deny.png
-PRIVACY_POUT_ALLOW = images/privacy_presence_out_allow.png
-PRIVACY_PIN_DENY = images/privacy_presence_in_deny.png
-PRIVACY_PIN_ALLOW = images/privacy_presence_in_allow.png
-PRIVACY_MSG_DENY = images/privacy_message_deny.png
-PRIVACY_MSG_ALLOW = images/privacy_message_allow.png
-CLIPBOARD = images/clipboard.png
+PRIVACY_QUERY_DENY = images/icons/privacy_query_deny.png
+PRIVACY_QUERY_ALLOW = images/icons/privacy_query_allow.png
+PRIVACY_POUT_DENY = images/icons/privacy_presence_out_deny.png
+PRIVACY_POUT_ALLOW = images/icons/privacy_presence_out_allow.png
+PRIVACY_PIN_DENY = images/icons/privacy_presence_in_deny.png
+PRIVACY_PIN_ALLOW = images/icons/privacy_presence_in_allow.png
+PRIVACY_MSG_DENY = images/icons/privacy_message_deny.png
+PRIVACY_MSG_ALLOW = images/icons/privacy_message_allow.png
+CLIPBOARD = images/icons/clipboard.png
 PRIVACY_ICON = images/icons/privacy.png
 PRIVACY_ICON_SMALL = images/icons/privacy.png
-PRIVACY_LIGHTNING = images/privacy_lightning.png
-PRIVACY_CHECK = images/privacy_check.png
-PRIVACY_DEACTIVATE_LIST = images/privacy_list_deactivate.png
+PRIVACY_LIGHTNING = images/icons/privacy_lightning.png
+PRIVACY_CHECK = images/icons/privacy_check.png
+PRIVACY_DEACTIVATE_LIST = images/icons/privacy_list_deactivate.png
 
 
 
@@ -50,7 +50,7 @@ MAIN_IMAGE_ICO = images/icon_16.ico
 MAIN_ICNS_FILE = images/message.icns
 SMALL_CHECK = images/icons/accept.png
 SMALL_DELETE = images/icons/remove.png
-AVAILABLE_USER = images/availableUser.png
+AVAILABLE_USER = images/icons/user.png
 AWAY_USER = images/awayUser.png
 FIND_IMAGE = images/find.png
 SMALL_ADD_IMAGE = images/icons/add.png
@@ -65,7 +65,7 @@ SMALL_USER1_NEW = images/icons/create.png
 SMALL_USER1_STOPWATCH = images/stopwatch_pause.png
 SMALL_USER1_MOBILEPHONE = images/user1_mobilephone.png
 SMALL_USER1_INFORMATION = images/icons/subscribe.png
-SMALL_ENTRY = images/small_entry.gif
+SMALL_ENTRY = images/icons/small_entry.png
 SMALL_AGENT_IMAGE = images/small_agent.png
 CHATTING_AGENT_IMAGE = images/user1.png
 CHATTING_CUSTOMER_IMAGE = images/user2.png
@@ -80,7 +80,7 @@ SMALL_BUSINESS_MAN_VIEW = images/icons/edit_profile.png
 SMALL_ALL_AGENTS_IMAGE = images/user1_earth.png
 SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/start_conference.png
 SMALL_ALL_CHATS_IMAGE = images/icons/contacts.png
-SMALL_CURRENT_AGENTS = images/users2.png
+SMALL_CURRENT_AGENTS = images/icons/users.png
 HELP2_24x24 = images/help_24x24.png
 SMALL_ALARM_CLOCK = images/icons/alarmclock.png
 SMALL_SCROLL_REFRESH = images/scroll_refresh.png
